# sgv

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
scripts/: build.py  use_cript.py
sgv/: app.py  base_path.py  cript.py  edit_configs.py  edit_user.py  formatnumber.py  main.py  read_configs.py  save_log.py
sgv/components/: __init__.py  table.py  wait.py
sgv/db/: mysql.sql  svg.db
sgv/files/: configs.conf
sgv/pages/: __init__.py  home.py  produto.py  vendas.py  vendedor.py
sgv/qbuilder/: __init__.py
sgv/style/: style.qss
tests/: main.py
tests/HotTest/: __init__.py
tests/HotTest/__typing/: __init__.py
